--- a/sass/colors.sass
+++ b/sass/colors.sass
@@ -4,3 +4,5 @@ $blue-color: rgba(21, 133, 255, 1)
 $blue-primary: #3E06DE
 $blue-medium: rgba(21, 133, 255, 1)
 $black-color: #0C012C
+$light-purple: #A57FE8
+$purple-color: #ECE6FC
