--- a/sass/main.sass
+++ b/sass/main.sass
@@ -60,6 +60,14 @@ header
 	.wrapper-line
 		display: flex
 		justify-content: space-between
+		align-items: flex-start
+	.menu-button
+		display: inline-flex
+		font-family: 'Avenir Heavy', sans-serif
+		font-weight: 900
+		font-size: 14px
+		line-height: 18px
+		color: $blue-primary
 
 
 
@@ -143,7 +151,11 @@ header
 		flex-direction: row
 		justify-content: space-between
 
+.top_mnu
+	display: none
+
 .benefits
+	overflow: hidden
 	background-color: #D4F0FB
 	.smallest-title
 		color: $blue-primary
@@ -160,28 +172,47 @@ header
 		flex-direction: row
 	.content-block
 		padding: 174px 0 150px
-		max-width: 400px
+		min-width: 500px
 	.form-block
+		position: relative
 		background: #FFFFFF
-		max-width: 520px
-		min-height: 420px
+		padding: 40px
+		//min-height: 420px
 		border: 1px solid #E2E8F0
 		box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.05)
 		border-radius: 8px
+		//overflow: hidden
+		.img-snippet
+			display: none
+			position: absolute
+			z-index: -1
+			right: 0
+			top: -200px
+			width: 140px
 	.img-block
 		display: flex
 		flex-direction: column
 		justify-content: flex-end
 		align-items: flex-end
 		width: 100%
+		max-width: 900px
 		img
-			max-width: 580px
+			max-width: 530px
 
 .how-it-works
-	background-color: #FFF5CC
+	background-color: $purple-color
 	color: $blue-primary
 	padding: 174px 0 216px
+	&.purple
+		&:after
+			background-image: url("../img/how-it-works-bg-snippet.png")
+			width: 100%
+			height: 100%
+			bottom: 0
+			background-position: center bottom
 	.content-wrapper
+		position: relative
+		z-index: 100
 		display: flex
 		flex-direction: column
 		align-items: center
@@ -193,9 +224,10 @@ header
 	.description
 		color: $black-color
 	.tiles-wrapper
+		position: relative
+		z-index: 100
 		display: flex
 		flex-direction: row
-		width: 100%
 		margin-left: -12px
 		margin-right: -12px
 		margin-top: 180px
@@ -221,6 +253,7 @@ header
 					text-transform: initial
 					color: $black-color
 					letter-spacing: 0.02em
+
 
 .our-partners
 	padding: 144px 0 96px
