--- a/sass/main.sass
+++ b/sass/main.sass
@@ -262,8 +262,8 @@ header
 		color: $blue-medium
 		margin-bottom: 38px
 	.grid-section
-		width: 100%
-		max-width: 760px
+		//width: 100%
+		//max-width: 760px
 		margin-left: -20px
 		margin-right: -20px
 		display: flex
